# scene-graph-from-egocentric-video

./: .gitignore  CITATION.cff  CONTRIBUTING.md  DATA_CARD.md  DATA_NOTICE.md  EVALUATION_CARD.md  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: sample.yaml
docs/: concepts.md  index.html
docs/assets/: walkthrough.webm
docs/data/: sample_detections.json  scene_graph.json  visual_detections.json
docs/v0.1.0/: index.html
eval/: qa_pairs.json
notebooks/: 03_scene_graph_queries.ipynb
outputs/detector_graph/: graph_comparison.json  query_results.json  scene_graph.json
outputs/qa_eval/: qa_results.json
outputs/sample_graph/: query_results.json  scene_graph.json
outputs/visual_detector_graph/: query_results.json  scene_graph.json  schema.json
reports/: scene_graph_memory_report.md
scripts/: adapters.py  evaluate_graph_qa.py  generate_detector_fixture.py  generate_visual_detections.py  render_graph_visuals.py  scene_graph_demo.py
tests/: test_scene_graph_demo.py
