[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "scene-graph-from-egocentric-video"
version = "0.1.0"
description = "Build and query a temporal scene graph from egocentric video annotations."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "h5py",
]

[project.optional-dependencies]
vision = ["opencv-python-headless"]
test = ["pytest"]
dev = ["pytest", "ruff"]

[project.scripts]
ego-scene-graph = "scene_graph_demo:main"

[tool.setuptools]
py-modules = ["adapters", "scene_graph_demo", "evaluate_graph_qa"]

[tool.setuptools.package-dir]
"" = "scripts"

[tool.ruff]
line-length = 180
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "UP", "B"]
ignore = ["E501"]
